rt/test/errors/deps/m1.volt
module m1;

fn add(a: i32, b: i32, c: i32) i32
{
	return a + b + c;
}
